# hackathon2021

./: pyproject.toml
style_similarity/: add_color_embeddings.py  config.py  dataset_builder.py  embed_images.py  embedder.py  extract_style_from_embeddings.py  features_eliminator.py  fetch_images.py  find_similar_images.py  knn.py  print_image_sizes.py  recommender.py  server.py
style_similarity/templates/: index.html
